--- a/Spring_basic/src/main/resources/templates/member/member-create.html
+++ b/Spring_basic/src/main/resources/templates/member/member-create.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
 <body>
+<div th:replace="member/header :: headerFragment"></div>
 <h2>register</h2>
 <form action="/member/create" method="post">
     <table>
