--- a/Spring_basic/src/main/resources/templates/member/member-detail.html
+++ b/Spring_basic/src/main/resources/templates/member/member-detail.html
@@ -8,21 +8,58 @@
     <div th:replace="member/header :: headerFragment"></div>
     <table>
         <tr>
-            <td>이름</td>
+            <td>이름 : </td>
             <td th:text="${member.name}"></td>
         </tr>
         <tr>
-            <td>이메일</td>
+            <td>이메일 : </td>
             <td th:text="${member.email}"></td>
         </tr>
         <tr>
-            <td>비밀번호</td>
+            <td>비밀번호 : </td>
             <td th:text="${member.password}"></td>
         </tr>
         <tr>
-            <td>가입 시간시간</td>
+            <td>가입 시간시간 : </td>
             <td th:text="${member.create_at}"></td>
         </tr>
     </table>
+    <button type="button" onclick="doDisplay()">수정</button>
+    <a th:href="@{/member/delete/(id=${member.id})}"><button type="button">삭제</button></a>
+    <div id="updateForm" style="display:none;">
+        <form action="/member/update" method="post" >
+            <table>
+                <tr>
+                    <td><label>아이디</label></td>
+                    <td><input type="text" name="id" th:value="${member.id}" readonly></td>
+                </tr>
+                <tr>
+                    <td><label>이름</label></td>
+                    <td><input type="text" name="name" th:value="${member.name}"></td>
+                </tr>
+                <tr>
+                    <td> <label>이메일</label></td>
+                    <td><input type="text" name="email" th:value="${member.email}" readonly></td>
+                </tr>
+                <tr>
+                    <td><label>비밀번호</label></td>
+                    <td><input type="text" name="password" th:value="${member.password}"></td>
+                </tr>
+            </table>
+            <br>
+            <button type="submit"> 수정완료 </button>
+        </form>
+    </div>
+<script>
+    function doDisplay(){
+        var con = document.getElementById("updateForm");
+        if(con.style.display=='none'){
+            con.style.display = 'block';
+        }else{
+            con.style.display = 'none';
+        }
+    }
+</script>
+
 </body>
 </html>
