--- a/board/src/main/resources/templates/post/post-list.html
+++ b/board/src/main/resources/templates/post/post-list.html
@@ -2,21 +2,36 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <style>
+        .pull-right{
+            float: right;
+            margin-right: 10px;
+        }
+    </style>
     <title>Title</title>
 </head>
 <body>
+<div th:replace="header :: headerFragment" ></div>
 <div class="container">
     <div class="page-header"><h1>게시글 목록</h1></div>
-    <div class="float-end">
-        <a href="/"><button type="button" class="btn btn-primary">글쓰기</button></a>
+    <div class="pull-right">
+        <a href="/post/create" class="btn btn-primary"> 글쓰기 </a>
     </div>
     <table class="table">
+        <thead>
         <tr>
             <th>id</th>
             <th>title</th>
-            <th>body</th>
-            <th>userId</th>
+            <th>#</th>
         </tr>
+        </thead>
+        <tbody>
+        <tr th:each="post : ${postList}">
+            <td th:text="${post.id}"></td>
+            <td th:text="${post.title}"></td>
+            <td> <a th:href="@{/post/detail/{id}(id=${post.id})}">글보기</a></td>
+        </tr>
+        </tbody>
     </table>
 </div>
 </body>
