--- a/board/src/main/resources/templates/author/author-detail.html
+++ b/board/src/main/resources/templates/author/author-detail.html
@@ -37,6 +37,10 @@
         <td th:text="${author.role}"></td>
     </tr>
     <tr>
+        <td>작성 글 수 : </td>
+        <td th:text="${author.postCount}"></td>
+    </tr>
+    <tr>
         <td>가입 시간 : </td>
         <td th:text="${author.createdTime}"></td>
     </tr>
