--- a/board/src/main/resources/templates/post/post-list.html
+++ b/board/src/main/resources/templates/post/post-list.html
@@ -22,6 +22,7 @@
         <tr>
             <th>id</th>
             <th>title</th>
+            <th>email</th>
             <th>#</th>
         </tr>
         </thead>
@@ -29,10 +30,19 @@
         <tr th:each="post : ${postList}">
             <td th:text="${post.id}"></td>
             <td th:text="${post.title}"></td>
+            <td th:text="${post.author_email}"></td>
             <td> <a th:href="@{/post/detail/{id}(id=${post.id})}">글보기</a></td>
         </tr>
         </tbody>
     </table>
+
+    <ul class="pagination justify-content-center">
+        <li class="page-item" th:each="pageNum : ${#numbers.sequence(0,(postList.totalPages)-1)}"
+            th:classappend="${pageNum == postList.pageable.pageNumber} ? 'active' " >
+            <a class="page-link" th:href="@{/post/list/(page=${pageNum}) }" th:text="${pageNum+1}"></a>
+        </li>
+    </ul>
+
 </div>
 </body>
 </html>
