--- a/board/src/main/resources/templates/post/post-create.html
+++ b/board/src/main/resources/templates/post/post-create.html
@@ -20,10 +20,10 @@
                 <td> <label for="contents">contents</label></td>
                 <td><textarea id="contents" name="contents" class="form-control" style="width: 1100px; height: 300px;"></textarea></td>
             </tr>
-            <tr class="form-group">
-                <td> <label for="email">email</label></td>
-                <td><input id="email" name="email" class="form-control"></td>
-            </tr>
+<!--            <tr class="form-group">-->
+<!--                <td> <label for="email">email</label></td>-->
+<!--                <td><input id="email" name="email" class="form-control"></td>-->
+<!--            </tr>-->
             <tr class="form-group">
                 <td> <label >예약여부</label></td>
                 <td>
